--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,12 +7,28 @@
   <title><%= APP_TITLE %></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Favicons -->
+	<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico?v=1">
+
   <!-- inject:css -->
+	<link rel="stylesheet" href="/css/evolution.css" media="all">
+	<link rel="stylesheet" href="/css/evolution_ui.css" media="all">
+	<link rel="stylesheet" href="/css/smb-global.css" media="all">
+	<link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
+	<link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
+	<link rel="stylesheet" type="text/css" href="node_modules/angular2-toaster/lib/toaster.css" />
   <!-- endinject -->
 </head>
 <body>
 
-  <sd-app>Loading...</sd-app>
+	<div class="demo-app-wrap" demo-app>
+		<div class="blocking-overlay">
+			<div class="processing-request">
+				<img src="/assets/images/core/loader.gif" alt="Loading...">
+			</div>
+		</div>
+	</div>
 
   <script>
   // Fixes undefined module function in SystemJS bundle
