--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,17 +16,11 @@
 </head>
 <body>
 
-	<div class="demo-app-wrap" demo-app>
-		<div class="blocking-overlay">
-			<div class="processing-request">
-				<img src="/assets/images/core/loader.gif" alt="Loading...">
-			</div>
-		</div>
-	</div>
+	<sd-app>Loading...</sd-app>
 
   <script>
-  // Fixes undefined module function in SystemJS bundle
-  function module() {}
+    // Fixes undefined module function in SystemJS bundle
+    function module() {}
   </script>
 
   <!-- shims:js -->
